# INST414-Final-Project

./: README.md  pyproject.toml
INST414-Final-Project/: LICENSE  Makefile
INST414-Final-Project/docs/: mkdocs.yml
INST414-Final-Project/docs/docs/: index.md
