[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "INST414-Final-Project"
version = "0.0.1"
description = "Adaptive E-commerce Recommendation System"
authors = [
  { name = "Peter R." },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["INST414-Final-Project"]
include = ["pyproject.toml", "INST414-Final-Project/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["INST414-Final-Project"]
force-sort-within-sections = true

